# distributed-storage-system

./: .gitignore  Cargo.toml  Makefile  README.md  config.json  project_structure.txt  start.sh  stop.sh  test_client.sh
crates/ads/: Cargo.toml
crates/ads/src/: digest.rs  lib.rs  merkle_tree.rs  patricia_trie.rs
crates/ads/src/crypto_accumulator/: mod.rs
crates/ads/src/crypto_accumulator/acc/: digest_set.rs  dynamic_accumulator.rs  serde_impl.rs
crates/client/: Cargo.toml
crates/client/examples/: boolean_query_test.rs  integration_test.rs  testdata_test.rs
crates/client/src/: client.rs  main.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: boolean_expr.rs  lib.rs  rpc.rs  types.rs
crates/manager/: Cargo.toml  README.md
crates/manager/consistent_hash/: Cargo.toml
crates/manager/consistent_hash/examples/: basic_usage.rs  distributed_cache.rs  load_balance.rs
crates/manager/consistent_hash/src/: lib.rs
crates/manager/src/: lib.rs  main.rs  manager.rs  service.rs
crates/manager/src/core/: mod.rs  routing.rs  verification.rs
crates/storager/: Cargo.toml  README.md  STRUCTURE.md
crates/storager/ads/: Cargo.toml  README.md
crates/storager/ads/src/: lib.rs  set.rs
crates/storager/ads/src/crypto_accumulator/: mod.rs
crates/storager/ads/src/crypto_accumulator/acc/: mod.rs  utils.rs
crates/storager/ads/src/mpt/: db.rs  error.rs  mod.rs  mpt.rs  node.rs  proof.rs  utils.rs
crates/storager/ads/tests/: mpt_integration_test.rs  mpt_real_dataset_test.rs
crates/storager/src/: ads_trait.rs  lib.rs  main.rs  service.rs  storager.rs
crates/storager/src/ads/: _template.rs  crypto_accumulator.rs  mod.rs  mpt.rs
crates/system/: Cargo.toml
crates/system/src/: lib.rs
data/: testdata
docs/: PROOF_VERIFICATION.md  ~$进展规划_v1_1107.docx  ~$进展规划_v2_1114.docx  分布式双层可验证结构.pptx  分布式存储系统实现需求说明.docx  研究进展规划_v1_1107.docx  研究进展规划_v2_1114.docx
proto/: storage_service.proto
scripts/: start.sh  stop.sh  test.sh  test_boolean_query.sh
src/: lib.rs
