[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/manager",
    "crates/storager",
    "crates/common",
    "crates/ads",
]

[package]
name = "distributed-storage-system"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "crates/common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
 
