[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manager"
path = "src/main.rs"

[lib]
name = "manager"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
consistent_hash = { path = "./consistent_hash" }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
ark-serialize = "0.2"
ark-ec = "0.2"
ark-bls12-381 = "0.2"
ark-ff = "0.2"
