[package]
name = "storager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storager"
path = "src/main.rs"

[lib]
name = "storager"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
esa_rust = { path = "./ads" }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
ark-serialize = "0.2"
ark-ec = "0.2"
ark-bls12-381 = "0.2"
