
[package]
name = "esa_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0"
ark-bls12-381 = "0.2"
ark-ec = { version = "0.2", features = ["parallel"] }
ark-ff = { version = "0.2", features = ["asm", "parallel"] }
ark-poly = { version = "0.2", features = ["parallel"] }
ark-serialize = "0.2"
blake2b_simd = "1.0"
hex = "0.4"
howlong = "0.1"
lazy_static = "1.4"
log = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# MPT dependencies
serde_json = "1.0"
sha2 = "0.10"
lru = "0.12"
rocksdb = "0.22"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3"
env_logger = "0.11"
rand = "0.7"
serde_json = "1.0"
tempfile = "3.23.0"